# Amugen

./: CMakeLists.txt  README.md
Amugen/Base/: Scene.cpp  Scene.h  Subject.h  TransformComponent.cpp
Amugen/Singletons/: InputManager.h  SceneManager.h  Time.cpp
Amugen/Wrappers/: Controller.h
EngineFiles/Base/: Amugen.cpp  Amugen.h  Component.h  GameObject.cpp  GameObject.h  IColliderObserver.h  IObserver.h  Observer.h  Scene.cpp  Scene.h  Subject.h
EngineFiles/Commands/: Command.h  GameObjectCommands.h  MuteSoundCommand.cpp  MuteSoundCommand.h
EngineFiles/Components/: CollisionComponent.cpp  CollisionComponent.h  DistanceComponent.cpp  DistanceComponent.h  RenderComponent.cpp  RenderComponent.h  TextComponent.cpp  TextComponent.h  TextureComponent.cpp  TransformComponent.cpp  TransformComponent.h
EngineFiles/Singletons/: GUI.cpp  GameTime.cpp  GameTime.h  InputManager.cpp  InputManager.h  Renderer.cpp  Renderer.h  ResourceManager.cpp  ResourceManager.h  SceneManager.cpp  SceneManager.h  ServiceLocator.cpp  ServiceLocator.h  Singleton.h  SoundSystem.cpp  SoundSystem.h
EngineFiles/Wrappers/: Controller.cpp  Controller.h  Font.cpp  Font.h  Sound.cpp  Sound.h  Texture2D.cpp  Texture2D.h
Minigin/: Main.cpp
Minigin/Base/: Amugen.cpp  Amugen.h  Component.h  GameObject.cpp  GameObject.h  Minigin.cpp  Observer.h
Minigin/Commands/: DamageCommand.h  ScoreCommand.h
Minigin/Components/: DisplayComponent.h  FPSComponent.cpp  HealthComponent.h  ScoreComponent.cpp  ScoreComponent.h  TextComponent.cpp  TextComponent.h  TextureComponent.cpp  TextureComponent.h  TransformComponent.cpp
Minigin/Singletons/: InputManager.cpp  SceneManager.cpp
Minigin/Wrappers/: Controller.cpp  SteamAchievement.cpp  SteamAchievement.h
